@@ -52,8 +52,11 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.7.0</version>
 				<configuration>
-					<source>10</source>
-					<target>10</target>
+					<source>12</source>
+					<target>12</target>
+					<compilerArgs>
+						<arg>--enable-preview</arg>
+					</compilerArgs>
 				</configuration>
 				<dependencies>
 					<dependency>
